--- a/web/views/layout.html
+++ b/web/views/layout.html
@@ -3,9 +3,7 @@
 <head>
   {% include 'header.html' %}
 </head>
-
-<body>
-  {% include 'nav.html' %}
+  <!-- {% include 'nav.html' %} -->
 
   {% block content %}{% endblock %}
 </body>
