allowed the navbar to render again

--- a/web/views/layout.html
+++ b/web/views/layout.html
@@ -3,7 +3,7 @@
 <head>
   {% include 'header.html' %}
 </head>
-  <!-- {% include 'nav.html' %} -->
+  {% include 'nav.html' %}
 
   {% block content %}{% endblock %}
 </body>
