--- a/web/views/nav.html
+++ b/web/views/nav.html
@@ -2,15 +2,33 @@
 <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
-    <h3 class="w3-padding-64"><b>Company<br>Name</b></h3>
+    <h3 class="w3-padding-64">
+      <b>Zigliki</b>
+      <br>
+      <a href="https://github.com/kingnoskcaj" style="text-decoration: none;">
+        <i class="fa fa-github w3-hover-opacity" title="GitHub"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/zigliki/" style="text-decoration: none;">
+        <i class="fa fa-linkedin w3-hover-opacity" title="LinkedIn"></i>
+      </a>
+      <a href="https://twitter.com/zigliki" style="text-decoration: none;">
+        <i class="fa fa-twitter w3-hover-opacity" title="Twitter"></i>
+      </a>
+      <!--
+      <a href="" style="text-decoration: none;">
+        <i class="fa fa-book w3-hover-opacity" title="CV/Resumé"></i>
+      </a>
+    -->
+    </h3>
   </div>
   <div class="w3-bar-block">
     <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Showcase</a> 
-    <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Services</a> 
-    <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Designers</a> 
-    <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Packages</a> 
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#intro" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Introduction</a> 
+    <a href="#Project_Creator" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Project Creator</a> 
+    <a href="#Portfolio" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Portfolio Website</a>
+    <a href="#Guessify" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Guessify</a> 
+    <a href="#Car_Dealer_Website" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Car Dealer Website</a> 
+    <a href="#ZigzBot" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">ZigzBot</a>
   </div>
 </nav>
 
