removed some less useful projects and linked the remainig ones to github

--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -39,7 +39,7 @@ body {font-size:16px;}
     videos and pdfs. It was deployed to the cloud through Azure as well. Unfortunately, it is no longer online
     as the deployment was through the school accounts which are no longer active and I cannot afford to run the deployment myself.
     </p>
-    <p><b><a href="/project-creator">Click here to learn more!</a></b></p>
+    <p><b><a href="https://github.com/rbloemert/MERM-Capstone2020">Check out this project on GitHub!</a></b></p>
   </div>
 
   <!-- Portfolio -->
@@ -58,6 +58,7 @@ body {font-size:16px;}
   </div>
 
   <!-- Guessify -->
+  <!--
   <div class="w3-container" id="Guessify" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Guessify</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
@@ -69,6 +70,7 @@ body {font-size:16px;}
     </p>
     <p><b><a href="/guessify">Click here to learn more!</a></b></p>
   </div>
+  -->
 
   <!-- Car Dealer Website -->
   <div class="w3-container" id="Car_Dealer_Website" style="margin-top:75px">
@@ -78,10 +80,11 @@ body {font-size:16px;}
     <p>Car Dealer Website is a demonstration of a React frontend with a Node.js backend. It utilises MongoDB
     for data storage.
     </p>
-    <p><b><a href="/car-dealer-website">Click here to learn more!</a></b></p>
+    <p><b><a href="https://github.com/kupoapo/CarDealerWebsite">Check out this project on GitHub!</a></b></p>
   </div>
 
   <!-- ZigzBot -->
+  <!--
   <div class="w3-container" id="ZigzBot" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>ZigzBot</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
@@ -94,6 +97,7 @@ body {font-size:16px;}
     </p>
     <p><b><a href="/zigzbot">Click here to learn more!</a></b></p>
   </div>
+  -->
 
   
 
