adjusted the nav bar to match the projects listed in index.html. also changed the navbar title

--- a/web/views/nav.html
+++ b/web/views/nav.html
@@ -26,16 +26,16 @@
     <a href="#intro" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Introduction</a> 
     <a href="#Project_Creator" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Project Creator</a> 
     <a href="#Portfolio" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Portfolio Website</a>
-    <a href="#Guessify" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Guessify</a> 
+    <!--  <a href="#Guessify" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Guessify</a> -->
     <a href="#Car_Dealer_Website" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Car Dealer Website</a> 
-    <a href="#ZigzBot" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">ZigzBot</a>
+    <!-- <a href="#ZigzBot" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">ZigzBot</a> -->
   </div>
 </nav>
 
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
   <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-  <span>Company Name</span>
+  <span>Zigliki's Things</span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
