added Guessify back to the list

--- a/web/views/nav.html
+++ b/web/views/nav.html
@@ -26,7 +26,7 @@
     <a href="#intro" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Introduction</a> 
     <a href="#Project_Creator" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Project Creator</a> 
     <a href="#Portfolio" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Portfolio Website</a>
-    <!--  <a href="#Guessify" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Guessify</a> -->
+    <a href="#Guessify" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Guessify</a>
     <a href="#Car_Dealer_Website" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Car Dealer Website</a> 
     <!-- <a href="#ZigzBot" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">ZigzBot</a> -->
   </div>
