--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -68,7 +68,7 @@ body {font-size:16px;}
     the code with ViewController.swift. The apps that were developed afterwards did better but
     I no longer have those applications. 
     </p>
-    <p><b><a href="/guessify">Click here to learn more!</a></b></p>
+    <p><b><a href="https://github.com/kingnoskcaj/guessify">Click here to learn more!</a></b></p>
   </div>
   -->
 
